Final repository cleanup and consistency fixes
- Fix hardcoded user path in mixin.yaml external-ui setting
- Update legacy system installation references in README.md
- Make common.sh executable
- Ensure all paths use dynamic user variables
- Complete user-space conversion with no system-wide dependencies

--- a/resources/mixin.yaml
+++ b/resources/mixin.yaml
@@ -4,7 +4,7 @@ system-proxy:
 
 # Web 控制台配置
 external-controller: "0.0.0.0:9090"
-external-ui: /home/gw/.local/share/clash/public
+external-ui: ~/.local/share/clash/public
 secret:
 
 # 代理服务器配置
