feat: Add optimized routing for uiuiapi.com AI API provider
- Added uiuiapi.com to AI-Manual proxy group for optimal performance
- Based on comprehensive performance testing comparing direct vs proxy connections
- Proxy routing provides better reliability (100% vs 67% success rate)
- Optimal response time: ~0.175s through V1-美国02 node
- Resolves connectivity issues with sg.uiuiapi.com API access

--- a/resources/mixin.yaml
+++ b/resources/mixin.yaml
@@ -112,6 +112,9 @@ rules:
   - DOMAIN,www.openxlab.org.cn,DIRECT
   - DOMAIN-SUFFIX,mineru.net,DIRECT
 
+  # AI API Providers - Optimized proxy routing based on performance testing
+  - DOMAIN-SUFFIX,uiuiapi.com,AI-Manual
+
   # 高优先级规则 - 覆盖订阅中的通用规则
   - DOMAIN-SUFFIX,youtube.com,Streaming
   - DOMAIN-SUFFIX,youtu.be,Streaming
