feat: restore and optimize sg.uiuiapi.com proxy routing
- Add AI-UIUI-Auto proxy group with url-test targeting sg.uiuiapi.com
- Configure optimized US server selection for best connectivity
- Add specific routing rule for uiuiapi.com domain
- Include DNS optimization for reliable resolution
- Restore functionality that was lost during previous undo operation

--- a/resources/mixin.yaml
+++ b/resources/mixin.yaml
@@ -125,7 +125,7 @@ rules:
   - DOMAIN-SUFFIX,mineru.net,DIRECT
 
   # AI API Providers - Optimized proxy routing based on performance testing
-  - DOMAIN-SUFFIX,uiuiapi.com,AI
+  - DOMAIN-SUFFIX,uiuiapi.com,AI-UIUI-Auto
 
   # 高优先级规则 - 覆盖订阅中的通用规则
   - DOMAIN-SUFFIX,youtube.com,Streaming
@@ -337,3 +337,4 @@ dns:
     "claude.ai": [8.8.8.8, 1.1.1.1, 208.67.222.222]
     "openai.com": [8.8.8.8, 1.1.1.1, 208.67.222.222]
     "chatgpt.com": [8.8.8.8, 1.1.1.1, 208.67.222.222]
+    "uiuiapi.com": [8.8.8.8, 1.1.1.1, 208.67.222.222]
